512 adding vital connections logic
