# packages/operator/docs/swagger.json
@@ -3794,6 +3794,10 @@
                     "description": "Username",
                     "type": "string"
                 },
+                "vital": {
+                    "description": "Is connection vital (vital connection cannot be deleted)",
+                    "type": "boolean"
+                },
                 "webUILink": {
                     "description": "Custom web UI link",
                     "type": "string"
